Add Recipe and appointment to database improve DoctorDashboardController and PatientDashboardController adding new operations: save recipe to file, enabling appointment register, enabling write recipe for patients